--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -65,7 +65,7 @@ web:
             elif [ "$PACKAGE_MANAGER" = "poetry" ]; then
                 # poetry run gunicorn -w 4 -b unix:$SOCKET "flaskr:create_app()"
                 # poetry blackfire-python gunicorn -w 4 -b unix:$SOCKET my_app.wsgi:application
-                poetry blackfire-python gunivonn -e 4 -b unix:$SOCKET flaskr.sgi:app
+                poetry run blackfire-python gunicorn -e 4 -b unix:$SOCKET flaskr.wsgi:app
 
             fi
 
