--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ platformshconfig = "^2.4.0"
 pytest = "^7.1.2"
 coverage = "^6.3.2"
 gunicorn = "^20.1.0"
+Flask-Caching = "^1.10.1"
 
 [tool.poetry.dev-dependencies]
 
