--- a/flask-mariadb/pyproject.toml
+++ b/flask-mariadb/pyproject.toml
@@ -11,6 +11,7 @@ Flask-SQLAlchemy = "^2.5.1"
 Flask-Migrate = "^3.1.0"
 mysql-connector-python = "^8.0.29"
 python-dotenv = "^0.20.0"
+Flask-Caching = "^1.10.1"
 
 [tool.poetry.dev-dependencies]
 
