--- a/flask-mariadb/pyproject.toml
+++ b/flask-mariadb/pyproject.toml
@@ -12,6 +12,7 @@ Flask-Migrate = "^3.1.0"
 mysql-connector-python = "^8.0.29"
 python-dotenv = "^0.20.0"
 Flask-Caching = "^1.10.1"
+redis = "^4.2.2"
 
 [tool.poetry.dev-dependencies]
 
